# swodec

./: .gitignore  Makefile.am  autogen.sh  configure.ac
m4/: swodec.m4
man/: swodec.1
src/: Makefile.am  dwt.c  main.c  swodec.h  version.h.in
